# Ticket-Bot

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
bot/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
bot/cogs/: admin.py  analytics.py  events.py  security.py  tickets.py
bot/config/: config.example.yaml  config.yaml
bot/config/locales/: en-US.json
bot/core/: api.py  bot.py  config.py  errors.py  extensions.py  logging.py
bot/dashboard/: README.md
bot/database/: base.py  models.py  repositories.py
bot/database/migrations/: 001_init.sql  runner.py
bot/services/: analytics_service.py  automation_service.py  cache.py  security_service.py  ticket_service.py  transcript_service.py
bot/tests/: test_config.py  test_mock_discord_objects.py  test_rate_limit.py  test_ticket_service.py
bot/utils/: constants.py  decorators.py  embeds.py  i18n.py  rate_limit.py  time.py
bot/views/: setup_wizard.py  ticket_controls.py  ticket_panel.py
data/: tickets.db-shm  tickets.db-wal
