[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "B", "C4", "RUF"]
ignore = ["E203", "E501", "ASYNC240"]
